--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  background: #f8fafc;
+  background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
   color: #1e293b;
   overflow-x: hidden;
   scroll-behavior: smooth;
@@ -262,6 +262,10 @@ h2 {
 
 #newsletter button:hover {
   background: #0369a1;
+}
+
+.feedback{
+  margin-top: 20px;
 }
 
 /* FOOTER */
